# sdl3-gpu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  script.py
android-project/: build.gradle  gradle.properties  local.properties  settings.gradle
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/jni/SDL3/: CMakeLists.txt
android-project/app/libs/: INSTALL.md
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/org/libsdl/bubuk/: HelloWorldActivity.java
include/: main.h  main_animation.h  main_audio.h  main_global.h  main_gpu.h  main_gui.h  main_helper.h  main_obj.h  main_physic.h  main_render.h  tiny_fiber.h
include/Noesis/NsApp/: Launcher.h  Window.h
include/Noesis/NsCore/: BuildSettings.h  Delegate.h
include/Noesis/NsGui/: FrameworkElement.h  InlineUIContainer.h  TextBlock.h
include/SDL3/: Android.mk
include/nvrhi/lib/debug/: nvrhi.exp
include/nvrhi/lib/release/: nvrhi.exp  nvrhi.lib
include/physx/lib/: PhysXCommon_64.exp  PhysXCooking_64.lib  PhysXTask_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib
include/physx/lib/debug/: LowLevelAABB_static_64.lib  PVDRuntime_64.exp  PVDRuntime_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXVehicle2_static_64.lib  PhysX_64.exp
include/physx/lib/release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.exp  PhysX_64.lib  PhysX_64.map  SceneQuery_static_64.lib
resource/: MainWindow.xaml  katana.mtl
shaders/: frag.glsl  frag.slang  frag.spv  frag_manual.glsl  shader.spv.frag  shader.spv.vert  vert.glsl  vert.slang  vert.spv  vert_manual.glsl
